[gd_scene load_steps=8 format=3 uid="uid://bgo467n1v2qrt"]

[ext_resource type="Script" path="res://CreateQuestion/Piano/CQPiano.gd" id="1_fl8bu"]
[ext_resource type="StyleBox" uid="uid://cxt3p1cqhcx1g" path="res://Assets/ButtonColor/RedButtonNormal.tres" id="2_f1uvb"]
[ext_resource type="StyleBox" uid="uid://b1vp12avcsa6q" path="res://Assets/ButtonColor/RedButtonHover.tres" id="3_g3kgb"]
[ext_resource type="StyleBox" uid="uid://bw8ypx0hhphn8" path="res://Assets/ButtonColor/GreenColorFocus.tres" id="4_6b3b7"]
[ext_resource type="Texture2D" uid="uid://cp10qyeg3hy26" path="res://Assets/iconos/borrar2.png" id="5_nna4a"]
[ext_resource type="StyleBox" uid="uid://b5l8bij5x63n3" path="res://Assets/ButtonColor/BlueButtonNormal.tres" id="6_1ytbo"]
[ext_resource type="StyleBox" uid="uid://bt60dr6ro1cwu" path="res://Assets/ButtonColor/BlueButtonHover.tres" id="7_qdfih"]

[node name="CQPiano" type="CenterContainer"]
custom_minimum_size = Vector2i(1500, 240)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -650.0
offset_right = 650.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("1_fl8bu")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2i(1400, 220)
layout_mode = 2
offset_left = 50.0
offset_top = 10.0
offset_right = 1450.0
offset_bottom = 230.0
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 60.0
offset_top = 37.0
offset_right = 1440.0
offset_bottom = 202.0

[node name="Title" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(1380, 0)
layout_mode = 2
offset_right = 1380.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/Title"]
custom_minimum_size = Vector2i(983, 0)
layout_mode = 2
offset_top = 7.0
offset_right = 983.0
offset_bottom = 33.0
text = "Pregunta #:  --"

[node name="Control" type="Control" parent="VBoxContainer/Title"]
custom_minimum_size = Vector2i(270, 40)
layout_mode = 2
anchors_preset = 0
offset_left = 1003.0
offset_right = 1273.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Title/Control"]
custom_minimum_size = Vector2i(270, 40)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0.627451, 0.45098, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Title/Control"]
custom_minimum_size = Vector2i(270, 40)
layout_mode = 0
offset_right = 270.0
offset_bottom = 32.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Title/Control/HBoxContainer"]
custom_minimum_size = Vector2i(160, 0)
layout_mode = 2
offset_top = 7.0
offset_right = 160.0
offset_bottom = 33.0
text = "Puntaje Pregunta"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/Title/Control/HBoxContainer"]
custom_minimum_size = Vector2i(20, 0)
layout_mode = 2
offset_left = 178.0
offset_top = 4.0
offset_right = 261.063
offset_bottom = 35.0
size_flags_horizontal = 6
size_flags_vertical = 4
rounded = true
update_on_text_changed = true

[node name="Delete" type="Button" parent="VBoxContainer/Title"]
custom_minimum_size = Vector2i(80, 32)
layout_mode = 2
offset_left = 1293.0
offset_right = 1373.0
offset_bottom = 40.0
theme_override_styles/normal = ExtResource("2_f1uvb")
theme_override_styles/hover = ExtResource("3_g3kgb")
theme_override_styles/focus = ExtResource("4_6b3b7")
icon = ExtResource("5_nna4a")
icon_alignment = 1

[node name="QuestionBox" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(1380, 80)
layout_mode = 2
offset_top = 44.0
offset_right = 1380.0
offset_bottom = 134.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/QuestionBox"]
custom_minimum_size = Vector2i(1180, 90)
layout_mode = 2
offset_left = 100.0
offset_right = 1280.0
offset_bottom = 90.0
theme_override_styles/normal = ExtResource("6_1ytbo")
placeholder_text = "Escribe aqui la pregunta ..."
wrap_mode = 1
minimap_width = 200

[node name="Answer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(1300, 0)
layout_mode = 2
offset_left = 40.0
offset_top = 138.0
offset_right = 1340.0
offset_bottom = 165.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/Answer"]
custom_minimum_size = Vector2i(1180, 0)
layout_mode = 2
offset_left = 60.0
offset_right = 1240.0
offset_bottom = 27.0
theme_override_styles/normal = ExtResource("6_1ytbo")
theme_override_styles/pressed = ExtResource("6_1ytbo")
theme_override_styles/hover = ExtResource("7_qdfih")
theme_override_styles/hover_pressed = ExtResource("7_qdfih")
button_pressed = true
text = "El alumno podr√° ver el nombre de las notas (Do, Re, Mi ....) en las teclas del piano"

[connection signal="value_changed" from="VBoxContainer/Title/Control/HBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="pressed" from="VBoxContainer/Title/Delete" to="." method="_on_delete_pressed"]
[connection signal="toggled" from="VBoxContainer/Answer/CheckBox" to="." method="_on_check_box_toggled"]
